fixing contrast for the text above the backgroudn images

--- a/slice/src/components/section/section.scss
+++ b/slice/src/components/section/section.scss
@@ -48,6 +48,7 @@
   }
 
   &__bg-wrap {
+    background-color: #253857;
     overflow: hidden;
     z-index: 0;
 
